[tool.poetry]
name = "ai-guidelines-guru"
version = "0.1.1"
description = ""
authors = ["Koeritz, Lisa <lisa.koeritz@uni-tuebingen.de>"]
license = "GNU"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.114.1"
modal = "^0.64.101"
pydantic = "^2.9.1"
qdrant-client = "^1.11.1"
python-decouple = "^3.8"
lancedb = "^0.18.0"
tantivy = "^0.22.0"
langchain-qdrant = "^0.1.3"
uvicorn = "^0.30.6"
langchain-community = "^0.2.16"
langchain-groq = "^0.1.9"
fastembed = "^0.3.6"
flashrank = "^0.2.9"
python-dotenv = "^1.0.1"
ipykernel = "^6.30.0"
pandas = "^2.3.1"
llama-parse = "^0.6.51"
pdfplumber = "^0.11.9"
unstructured = "^0.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
